        contained in a list.  (Closes: #713066)
  * Rewrite vim-tiny's help.txt.
    + Clarify the reasoning for the package and why the help isn't available.
    + Explicitly mention what the more featureful Vim packages are.
    + Point to vimhelp.appspot.com for online help, since it is better kept
      updated.
  * Update Vcs-* URLs to point to Git.

 -- James McCoy <jamessan@debian.org>  Sun, 30 Aug 2015 22:45:03 -0400

vim (2:7.4.826-1) unstable; urgency=medium

  * Merge upstream tag v7-4-826. Remove merged patches.
    + Recognize bash completion files for syntax highlighting.  (Closes:
      #628494)
    + Update declared license for xxd.  (Closes: #776191)
  * Enable <S-Insert> mappings when gvim is started via “:gui”.  Based on a
    patch from Daniel Shahaf.  (Closes: #793781)

 -- James McCoy <jamessan@debian.org>  Sun, 16 Aug 2015 22:17:45 -0400

vim (2:7.4.712-3) unstable; urgency=medium

  * Change Suggests: ttf-dejavu → fonts-dejavu.  (Closes: #783969)
  * Welcome, wily werewolf.
  * Remove vim-lesstif transitional package.
  * Remove obsolete Breaks/Replaces from vim-gui-common.
  * Lintian:
    + Add override to vim-common for desktop-command-not-in-package, since vim
      is provided by the other binary packages.
    + Remove spelling-error-in-binary overrides for tEH
    + Remove empty /usr/share/pixmaps directory from vim-gui-common
  * Declare compliance with policy 3.9.6
  * Fix FTBFS with newer ghostscript by using ps2write device.  (Closes:
    #785221)
  * Make build resilient to changes in the default tcl version.
  * Update description of vim-tiny to clarify it only exists to provide the vi
    binary for the base install.  (Closes: #784268)

 -- James McCoy <jamessan@debian.org>  Sat, 13 Jun 2015 01:16:02 -0400

vim (2:7.4.712-2) unstable; urgency=medium

  * Add stretch to Debian syntax files.  (Closes: #783506)
  * syntax/debsources.vim: Recognize all Debian/Ubuntu releases, but highlight
    unsupported releases differently.