@@ -15,6 +15,7 @@ vim (2:7.4.898-1) UNRELEASED; urgency=medium
     + Point to vimhelp.appspot.com for online help, since it is better kept
       updated.
   * Update Vcs-* URLs to point to Git.
+  * Install upstream's patchlist as the changelog.  (Closes: #622827)
 
  -- James McCoy <jamessan@debian.org>  Sun, 30 Aug 2015 22:45:03 -0400
 
